--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "antd": "^4.24.1",
     "axios": "^1.1.3",
     "bootstrap": "^5.2.3",
+    "jwt-decode": "^3.1.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hot-toast": "^2.4.0",
